content/boomerang-flow/2.1.0/getting-to-know/06.properties.md
---
title: Properties
index: 6
---

# Properties

Properties are an important aspect of Boomerang Flow and can be set for many different parts of the application and are available throughout a workflow or task and are subsituted at execution time.

## Property Availability

You can reference properties in a task by using the `${p:}` syntax and the following table lists the type of properties and when they are available in an execution.

| Property Type            | Available When?                                                                                                                                                                                              | Syntax                    | Example                    |
| ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------- | -------------------------- |
| Workflow System Property | Throughout the workflow lifecycle. Set by the application.                                                                                                                                                   | `${p:workflow/property}`  | \${p:workflow/activity.id} |
| Workflow Input Property  | Throughout the workflow lifecycle. Created and set by user through Designer Inputs                                                                                                                           | `${p:property}`           | \${p:slack.channel}        |
| Task System Property     | In the execution of that particular task. Set by Flow.                                                                                                                                           | `${p:task/property}`      | \${p:task/task.name}       |
| Task Input Property      | In the execution of that particular task. These are the properties required and defined by the task.                                                                                                         | `${p:property}`           |                            |
| Task Output Property     | Throughout the workflow lifecycle, after the task has completed. I.e. If you had two tasks; Task A and Task B, and Task B was linked after Task A, then Task B could reference output properties from Task A | `${p:Task Name/property}` |                            |

## System Properties

The following are properties provided by flow.

| Property     | Syntax                        | Description                                                                        |
| ------------ | ----------------------------- | ---------------------------------------------------------------------------------- |
| taskName     | `${p:task/task.name}`         | This is the user specified name of the executing task. It is unique to a workflow. |
| taskId       | `${p:task/task.id}`           | This is a unique identified for the established task in this particular workflow   |
| activityId   | `${p:workflow/activity.id}`   | This is a unique identifier for the workflow for this particular execution.        |
| workflowId   | `${p:workflow/workflow.id}`   | This is the identified for this worfklow.                                          |
| workflowName | `${p:workflow/workflow.name}` | This is the identified for this worfklow.                                          |

## Output Properties

All tasks can have output properties, which as mentioned above can be used by other tasks in the workflow, and are also available at the completion of a workflow via the execution statis API.

### Standard Tasks

Some standard tasks will output properties.

### Custom Tasks

See Custom Task [Architecture](../introduction/architecture) for more information on what is a Custom Task.

As it is bring your own container, we have provided two mechanisms for setting output properties

| Property Type | Location                        | Description                                                                        |
| ------------ | ----------------------------- | ---------------------------------------------------------------------------------- |
| Environment Vairable     | `/lifecycle/env`         | Any key value pair in the format of an environment variable can be placed in this file. At the termination of the worker, these will be turned into output properties. |
| Files       | `/lifecycle/<file>`           | Any file in the `/lifecycle` directory at termination of the worker will be turned into a base64 eoncded property. The key will be the filename. |