content/boomerang-flow/3.1.0/getting-to-know/06.properties.md
---
title: Properties
index: 6
---

# Properties

> **NOTE:** Properties are now deprecated and replaced with Parameters. We are maintaing backwards compatability for now.

Properties are an important aspect of Boomerang Flow, allowing for a powerful inheritance model, and can be set and represent the many different parts of the application. They are available throughout a workflow or task and are substituted at execution time.

## Property Availability

You can reference properties in a task using the `${p:}` syntax. The following table lists the type of properties and when they are available in an execution.

| Property Type            | Available When?                                                                                                                                                                                              | Syntax                    | Example                    |
| ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------- | -------------------------- |
| Workflow System Property | Throughout the workflow lifecycle. Set by the application.                                                                                                                                                   | `${p:workflow/property}`  | \${p:workflow/activity.id} |
| Workflow Input Property  | Throughout the workflow lifecycle. Created and set by user through Editor Inputs                                                                                                                           | `${p:property}`           | \${p:slack.channel}        |
| Task System Property     | In the execution of that particular task. Set by Flow.                                                                                                                                           | `${p:task/property}`      | \${p:task/task.name}       |
| Task Input Property      | In the execution of that particular task. These are the properties required and defined by the task.                                                                                                         | `${p:property}`           |                            |
| Task Output Property     | Throughout the workflow lifecycle, after the task has completed. For example, if you had two tasks; Task A and Task B, and Task B was linked after Task A, then Task B could reference output properties from Task A | `${p:Task Name/property}` |                            |

## System Properties

The following are properties provided by Flow.

| Property     | Syntax                        | Description                                                                        |
| ------------ | ----------------------------- | ---------------------------------------------------------------------------------- |
| taskName     | `${p:task/task.name}`         | This is the user specified name of the executing task. It is unique to a workflow. |
| taskId       | `${p:task/task.id}`           | This is a unique identified for the established task in this particular workflow   |
| activityId   | `${p:workflow/activity.id}`   | This is a unique identifier for the workflow for this particular execution.        |
| workflowId   | `${p:workflow/workflow.id}`   | This is the identified for this workflow.                                          |
| workflowName | `${p:workflow/workflow.name}` | This is the identified for this workflow.                                          |

## Output Properties

All tasks can have output properties, which as mentioned above can be used by other tasks in the workflow. They are also available at the completion of a workflow via the execution status API.

### Standard Tasks

Some standard tasks will output properties.

### Custom Tasks

See [Custom task architecture](/boomerang-flow/architecture/architecture-overview) for more information.

As this task is a bring-your-own container, we have provided two mechanisms for setting output properties.

| Property Type | Location                        | Description                                                                        |
| ------------ | ----------------------------- | ---------------------------------------------------------------------------------- |
| Environment Variable     | `/lifecycle/env`         | Any key value pair in the format of an environment variable can be placed in this file. At the termination of the worker, these will be turned into output properties. |
| Files       | `/lifecycle/<file>`           | Any file in the `/lifecycle` directory at termination of the worker will be turned into a base64 encoded property. The key will be the filename. |
